--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -37,14 +37,15 @@
 .box {
   width: 250px;
   height: 250px;
-  background: linear-gradient(to top, #32289b84, #530061);
+  /* background: linear-gradient(to top, #32289b84, #530061); */
+  background: linear-gradient(to top, #f55a267a, #F55B26);
   border-radius: 50%;
   margin-left: -3vmax;
 }
 .box2 {
   width: 200px;
   height: 200px;
-  background: linear-gradient(to bottom, #32289b84, #530061);
+  background: linear-gradient(to bottom, #f55a267a, #F55B26);
   border-radius: 50%;
   margin-left: 25vmax;
 }
@@ -131,7 +132,7 @@
 .sign {
   display: block;
   width: 100%;
-  background: linear-gradient(to right, #32289b84, #530061);
+  background: linear-gradient(to right, #f55a267a, #F55B26);
   padding: 0.75rem;
   text-align: center;
   color: rgb(243, 244, 246);
