--- a/src/Css/OrderList.css
+++ b/src/Css/OrderList.css
@@ -6,7 +6,7 @@
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #f2f2f2;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
